[package]
name = "firewall_audit"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "Cross-platform firewall audit tool and library (YAML/JSON rules, CSV/HTML/JSON export)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/<user>/<repo>"
homepage = "https://github.com/<user>/<repo>"
documentation = "https://docs.rs/firewall_audit"
keywords = ["firewall", "audit", "security", "csv", "json", "html"]
categories = ["command-line-utilities", "network-programming", "security"]

[lib]
name = "firewall_audit"
path = "src/lib.rs"
publish = false

[dependencies]
thiserror = "2.0"
struct-field-names-as-array = "0.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
ipnet = "2"
regex = "1"
strum = "0.27"
strum_macros = "0.27"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
windows_firewall = "0.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[package.metadata.cargo-machete]
ignored = ["strum"]
