[package]
name = "firewall_audit"
authors = ["lhenry-dev <lhenry.dev1@gmail.com>"]
version = "0.1.2"
edition = "2021"
rust-version = "1.78"
description = "Cross-platform firewall audit tool (YAML/JSON rules, CSV/HTML/JSON export)"
license = "MIT/Apache-2.0"
keywords = ["firewall", "audit", "security"]
categories = ["command-line-utilities", "network-programming", "security"]
readme = "README.md"
repository = "https://github.com/lhenry-dev/firewall_audit"
documentation = "https://docs.rs/firewall_audit"
homepage = "https://crates.io/crates/firewall_audit"

[[bin]]
name = "firewall_audit"
path = "src/main.rs"

[dependencies]
thiserror = "2.0.12"
struct-field-names-as-array = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.140"
ipnet = "2.11.0"
regex = "1.11.1"
strum = "0.27.1"
strum_macros = "0.27.1"
clap = { version = "4.5.41", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
chrono = "0.4.41"

[target.'cfg(windows)'.dependencies]
windows_firewall = "0.2.0"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"

[package.metadata.cargo-machete]
ignored = ["strum"]
